--- a/src/components/globalStyle.scss
+++ b/src/components/globalStyle.scss
@@ -5,6 +5,14 @@ $lightGreen: #B9F4BC;
 $purple: #6B7C93;
 $darkPurple: #32325D;
 
+$smallFont : 16px;
+$mediumFont: 20px;
+$largeFont: 40px;
+
+$regularFont : 400;
+$semiBoldFont: 500;
+$boldFont    : 600;
+
 //Most of the Smartphones Mobiles (Portrait)
 $mobile-portrait: "(max-width: 480px)";
 //Low Resolution Tablets, Mobiles (Landscape)
