Working on Intro and features

--- a/src/components/globalStyle.scss
+++ b/src/components/globalStyle.scss
@@ -4,6 +4,7 @@ $green: #24b47e;
 $lightGreen: #B9F4BC;
 $purple: #6B7C93;
 $darkPurple: #32325D;
+$dividerColor: #F6F9FC;
 
 $smallFont : 16px;
 $mediumFont: 20px;
