--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -1,4 +1,5 @@
 @import '../globalStyle';
+
 .Intro{
   height: 100vh;
   background: rgb(15,183,134);
@@ -21,9 +22,10 @@
   
   .IntroContent{
     display: flex;
+    justify-content: space-between;
     
     & > *{
-      flex-basis: 50%
+      flex-basis: 45%
     }
     
     .IntroLeft{
@@ -53,12 +55,27 @@
         .title{
           color: $white;
           font-size: $largeFont;
-          margin: 16px 0;
+          margin-bottom: 16px;
         }
         .subTitle{
           color:$offWhite;
           font-size: $smallFont;
         }
+      }
+      .createAccount{
+        font-size: $mediumFont;
+        font-weight: $boldFont;
+        background-color: $offWhite;
+        color: $green;
+      }
+    }
+    
+    .IntroRight{
+      padding: 28px;
+      margin: 0;
+      
+      .Slider{
+          margin-bottom: 56px;
       }
     }
   }
