--- a/src/components/globalStyle.scss
+++ b/src/components/globalStyle.scss
@@ -1,5 +1,6 @@
 $white: #FFFFFF;
 $offWhite: #D9FCFF;
+$darkGreen: #0FB786;
 $green: #24b47e;
 $lightGreen: #B9F4BC;
 $purple: #6B7C93;
@@ -8,7 +9,8 @@ $dividerColor: #F6F9FC;
 
 $smallFont : 16px;
 $mediumFont: 20px;
-$largeFont: 40px;
+$semiLargeFont: 28px;
+$largeFont: 36px;
 
 $regularFont : 400;
 $semiBoldFont: 500;
