--- a/src/components/Features/Features.scss
+++ b/src/components/Features/Features.scss
@@ -13,13 +13,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    border-bottom: 1px solid $dividerColor;
     &:nth-child(1){
       border-right: 1px solid $dividerColor;
-      border-bottom: 1px solid $dividerColor;
     }
     &:nth-child(2){
       border-left: 1px solid $dividerColor;
-      border-bottom: 1px solid $dividerColor;
     }
     &:nth-child(3){
       border-right: 1px solid $dividerColor;
@@ -37,7 +36,7 @@
       border-radius: 32px;
       text-align: center;
       padding-top: 22px;
-      & > *{
+      i{
         font-size: 26px;
         margin: 0;
         color: $green;
