--- a/src/components/globalStyle.scss
+++ b/src/components/globalStyle.scss
@@ -12,6 +12,8 @@ $mediumFont: 20px;
 $semiLargeFont: 28px;
 $largeFont: 36px;
 
+$mobileLargeFont: 26px;
+
 $regularFont : 400;
 $semiBoldFont: 500;
 $boldFont    : 600;
